fixed: top-bar aligning with main list

--- a/cvat-ui/src/components/tasks-page/styles.scss
+++ b/cvat-ui/src/components/tasks-page/styles.scss
@@ -27,6 +27,10 @@
 
                     display: flex;
                     margin-right: $grid-unit-size * 4;
+
+                    &:last-child {
+                        margin-right: $grid-unit-size * 2.5;
+                    }
                 }
 
                 .cvat-tasks-page-search-bar {
